Fix mobile layout. Adjust spacing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ canvas[resize] {
 }
 
 .mobile-banner > img {
-	height: 100%;
+	height: 80%;
 }
 
 .menu-bar-container {
@@ -236,7 +236,7 @@ canvas {
 	padding-bottom: 10px;
 }
 
-#desc-header, #desc-content {
+#desc-content {
 	color: #eeeeee;
 }
 
@@ -293,5 +293,29 @@ canvas {
 
 	.mobile-banner {
 		display: flex;
+	}
+
+	.menu-bar-container {
+		height: -moz-calc(100% - 50px) !important;
+		height: -webkit-calc(100% - 50px) !important;
+		height: -o-calc(100% - 50px) !important;
+		height: calc(100% - 50px) !important;
+	}
+
+	.info {
+		padding-top: 5px;
+		padding-bottom: 5px;
+	}
+
+	.menu-controls {
+		padding-top: 5px;
+		padding-bottom: 5px;
+	}
+
+	.desc {
+		padding-left: 10px;
+		padding-right: 10px;
+		padding-top: 5px;
+		padding-bottom: 5px;
 	}
 }
